added comma in toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
-    "matplotlib>=3.5"
+    "matplotlib>=3.5",
     "cycler",
     "ipython"
 ]
