--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,4 @@ packages = ["rebase_plot_style"]
 include-package-data = true
 
 [tool.setuptools.package-data]
-mycompany_style = ["*.mplstyle"]
+rebase_plot_style = ["*.mplstyle"]
